setup, add, integrating with redis

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,7 @@ DB_PASSWORD=password1234
 DB_SCHEMA=public
 DB_VOLUME_PATH=localpath
 JWT_SECRET=pleasemakesureitissecret
+REDIS_PORT=6379
+REDIS_ADDRESS=localhost
+REDIS_PASSWORD=password1234
+REDIS_DATABASE=0
