--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,8 @@ services:
       - "${DB_PORT}:5432"
     volumes:
       - ${DB_VOLUME_PATH}:/var/lib/postgresql/data
+  redis_bp:
+    image: redis:7.2.4
+    restart: unless-stopped
+    ports:
+      - "${REDIS_PORT}:6379"
